GatewayExample/dashboard.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: k8s-dashboard-route
  namespace: kube-system
spec:
  parentRefs:
  - name: istio
    namespace: gateway
  hostnames: ["dashboard.bebr.live"]
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: kubernetes-dashboard
      port: 8443
