GatewayExample/grafana-route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: grafana-route
  namespace: istio-system
spec:
  parentRefs:
  - name: istio
    namespace: gateway
  hostnames: ["grafana.bebr.live"]
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: grafana
      port: 3000
