GatewayExample/jaeger-route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: jaeger-route
  namespace: istio-system
spec:
  parentRefs:
  - name: istio
    namespace: gateway
  hostnames: ["jaeger.bebr.live"]
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: tracing
      port: 80
