GatewayExample/prom-route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: prometheus-route
  namespace: istio-system
spec:
  parentRefs:
  - name: istio
    namespace: gateway
  hostnames: ["prometheus.bebr.live"]
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: prometheus
      port: 9090
