GatewayExample/zipkin-route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: zipkin-route
  namespace: istio-system
spec:
  parentRefs:
  - name: istio
    namespace: gateway
  hostnames: ["zipkin.bebr.live"]
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: zipkin
      port: 9411
